--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@ body {
 }
 
 body {
-  display: grid;
-  place-items: center;
+  background: url(images/background.svg) no-repeat center/cover;
+  width: 100vw;
+  min-height: 812px;
+  height: 100vh;
 }
 
 main {
